# rvector

./: .gitmodules  CMakeLists.txt  allocator.h  benchmark.cpp  install.sh  profile.cpp  rvector.h  test.cpp  test_type.cpp  test_type.h
paper/: thesis.tex  thesis2.tex
src/: allocator.h  benchmark.cpp  rvector.h  test.cpp  vector.h
